[package]
name = "system_info"
version = "0.1.0"
authors = ["neyaznafiz <neyaznafiz@outlook.com>"]
edition = "2021"
description = "A package for collect information about system's OS, CPU and Disk_Drive"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/system_info"
homepage = "https://github.com/neyaznafiz/system_info"
repository = "https://github.com/neyaznafiz/system_info"
keywords = ["system", "os", "cpu", "disk", "info"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3